--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
 APP_NAME=Reactnodeauth
 PORT=8000
-DB_URL=mongodb+srv://aymmuazu:PUkI4puw8epJ03X6@reactnodeauth.3oabmdd.mongodb.net/?retryWrites=true&w=majority&appName=Reactnodeauth
-DB_URL_LIVE=mongodb://localhost:27017/reactnodeauth
+DB_URL=mongodb://localhost:27017/reactnodeauth
+DB_URL_LIVE=mongodb+srv://aymmuazu:PUkI4puw8epJ03X6@reactnodeauth.3oabmdd.mongodb.net/?retryWrites=true&w=majority&appName=Reactnodeauth
